mis les paramètres dans un div de largeur fixe, aligné le contenu à gauche

--- a/static/css/wdmproject.css
+++ b/static/css/wdmproject.css
@@ -94,6 +94,13 @@ div#eba_welcome_box input[type="submit"] {
   font-weight: bold;
 }
 
+div#parametres {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
 /*****************************************************************************
 /* Misc boxes */
 ul#wdmproject-navbar {
